[package]
name = "gemchat"
version = "0.1.0"
edition = "2024"
description = "simple gemini chat built with ratatui"
license = "MIT"
repository = "https://github.com/thelazydo/gemchat"
homepage = "https://github.com/thelazydo/gemchat"
readme = "README.md"
exclude = [
  ".github",
  "assets"
]

[dependencies]
anyhow = "1.0.100"
color-eyre = "0.6.5"
crossterm = "0.28.1"
dotenvy = "0.15.7"
futures-util = "0.3.31"
ratatui = "0.29.0"
reqwest = { version = "0.13.1", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
syntect = "5.3.0"
tokio = { version = "1.49.0", features = ["full"] }
tui-textarea = "0.7.0"
